; ModuleID = '/home/carl/AnghaBench/libgit2/tests/checkout/extr_tree.c_assert_status_entrycount.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/checkout/extr_tree.c_assert_status_entrycount.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i64)* @assert_status_entrycount to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @assert_status_entrycount(i32* %0, i64 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = call i32 @git_status_list_new(i32** %5, i32* %6, i32* null)
  %8 = call i32 @cl_git_pass(i32 %7)
  %9 = load i64, i64* %4, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = call i32 @git_status_list_entrycount(i32* %10)
  %12 = call i32 @cl_assert_equal_i(i64 %9, i32 %11)
  %13 = load i32*, i32** %5, align 8
  %14 = call i32 @git_status_list_free(i32* %13)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_status_list_new(i32**, i32*, i32*) #1

declare dso_local i32 @cl_assert_equal_i(i64, i32) #1

declare dso_local i32 @git_status_list_entrycount(i32*) #1

declare dso_local i32 @git_status_list_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
